workspace/log/build_2024-07-04_22-21-33/ps5_controller/stderr.log
  File "/home/mobot/ROS2/workspace/install/ps5_controller/lib/python3.12/site-packages/ps5_controller/ps5_publisher_node.py", line 17
    except ImportError:
    ^^^^^^
SyntaxError: invalid syntax

